--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -46,6 +46,6 @@ jobs:
           username: ${{ secrets.FTP_USERNAME }}
           password: ${{ secrets.FTP_PASSWORD }}
           local-dir: frontend/build/  # Directory of your React build files
-          server-dir: /guptagearmachanic.online/public_html/
+          server-dir: ./
           
 
